[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/icons/commodities/food.svg" type="Texture" id=1]
[ext_resource path="res://assets/fonts/consolas_20.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/gui/controls/commodity_stats.gd" type="Script" id=3]
[ext_resource path="res://scripts/gui/controls/two_value_bar.gd" type="Script" id=4]

[node name="CommodityStats" type="HBoxContainer"]
margin_right = 82.0
margin_bottom = 32.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="."]
margin_top = 4.0
margin_right = 24.0
margin_bottom = 28.0
hint_tooltip = "Commodity"
size_flags_vertical = 4
texture = ExtResource( 1 )

[node name="Production" type="Label" parent="."]
margin_left = 28.0
margin_top = 5.0
margin_right = 50.0
margin_bottom = 26.0
hint_tooltip = "Production / Consumption"
mouse_filter = 0
custom_fonts/font = ExtResource( 2 )
text = "25"
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 54.0
margin_right = 90.0
margin_bottom = 32.0

[node name="ProductionBar" type="Control" parent="VBoxContainer"]
margin_right = 36.0
margin_bottom = 12.0
rect_min_size = Vector2( 36, 12 )
hint_tooltip = "Production"
size_flags_vertical = 4
script = ExtResource( 4 )
bar_color = Color( 0.411765, 0.411765, 0.411765, 1 )
bar_above_color = Color( 0.388235, 0.709804, 0.333333, 1 )

[node name="ConsumptionBar" type="Control" parent="VBoxContainer"]
margin_top = 16.0
margin_right = 36.0
margin_bottom = 28.0
rect_min_size = Vector2( 36, 12 )
hint_tooltip = "Consumption"
size_flags_vertical = 4
script = ExtResource( 4 )
bar_above_color = Color( 1, 0.278431, 0.278431, 1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 94.0
margin_right = 126.0
margin_bottom = 32.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Supply" type="Label" parent="VBoxContainer2"]
margin_right = 32.0
margin_bottom = 16.0
hint_tooltip = "Potential production"
mouse_filter = 0
text = " +36"
valign = 1

[node name="Demand" type="Label" parent="VBoxContainer2"]
margin_top = 16.0
margin_right = 32.0
margin_bottom = 32.0
hint_tooltip = "Demand / potential consumption"
mouse_filter = 0
text = " -25"
valign = 1
